--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,23 @@
 {
-  "extends": ["next", "next/core-web-vitals"]
+  "extends": [
+    "next",
+    "next/core-web-vitals",
+    "whiteroom-react"
+  ],
+  "rules": {
+    "import-helpers/order-imports": [
+      "warn",
+      {
+        "newlinesBetween": "always",
+        "groups": [
+          "module",
+          "/^~//",
+          "parent",
+          "sibling",
+          "index"
+        ]
+      }
+    ],
+    "@typescript-eslint/explicit-module-boundary-types": "off"
+  }
 }
