--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,7 @@
         ]
       }
     ],
-    "@typescript-eslint/explicit-module-boundary-types": "off"
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/no-use-before-define": "off"
   }
 }
