--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.4",
+    "@material-ui/styles": "^4.11.4",
+    "clsx": "^1.1.1",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.35.1"
+    "react-text-typist": "^1.0.6"
   },
   "devDependencies": {
     "@types/react": "17.0.11",
