--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.9.0",
     "react-text-typist": "^1.0.6"
   },
   "devDependencies": {
