--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
+# env files
+.env
 .env.local
 .env.development.local
 .env.test.local
@@ -32,3 +33,4 @@ yarn-error.log*
 
 # vercel
 .vercel
+
