--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/styles": "^4.11.4",
     "clsx": "^1.1.1",
+    "crypto": "^1.0.1",
+    "js-response": "^1.1.0",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
