--- a/package.json
+++ b/package.json
@@ -28,20 +28,11 @@
     "@typescript-eslint/eslint-plugin": "^4.4.0",
     "@typescript-eslint/parser": "^4.4.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.2.0",
+    "eslint": "^7.32.0",
     "eslint-config-next": "11.0.1",
-    "eslint-config-prettier": "^6.12.0",
-    "eslint-config-whiteroom-react": "1.0.6",
-    "eslint-config-whiteroom-share": "^1.0.3",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-import-helpers": "^1.1.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.3",
-    "eslint-plugin-react-hooks": "^4.1.2",
+    "eslint-config-whiteroom": "2.0.3",
     "patch-package": "^6.4.7",
-    "prettier": "^2.1.2",
-    "typescript": "^4.0.3"
+    "prettier": "2.3.2",
+    "typescript": "^4.4.2"
   }
 }
