--- a/.eslintrc
+++ b/.eslintrc
@@ -3,8 +3,7 @@
     "project": "./tsconfig.json"
   },
   "extends": [
-    "next",
-    "next/core-web-vitals",
+    "plugin:@next/next/recommended",
     "whiteroom/react"
   ],
   "rules": {
