--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "tsc && eslint src --ext .js,.jsx,.ts,.tsx",
     "postinstall": "patch-package"
   },
   "dependencies": {
@@ -25,11 +25,8 @@
   },
   "devDependencies": {
     "@types/react": "17.0.33",
-    "@typescript-eslint/eslint-plugin": "^4.4.0",
-    "@typescript-eslint/parser": "^4.4.0",
-    "babel-eslint": "^10.1.0",
     "eslint": "^7.32.0",
-    "eslint-config-next": "12.0.1",
+    "eslint-config-next": "12.0.7",
     "eslint-config-whiteroom": "2.0.4",
     "patch-package": "^6.4.7",
     "prettier": "2.3.2",
