--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,3 @@
 {
-  "parserOptions": {
-    "project": "./tsconfig.json"
-  },
-  "extends": [
-    "plugin:@next/next/recommended",
-    "whiteroom/react"
-  ],
-  "rules": {
-    "@typescript-eslint/no-use-before-define": "off"
-  }
+  "extends": ["@remix-run/eslint-config", "@remix-run/eslint-config/node"]
 }
