--- a/package.json
+++ b/package.json
@@ -1,35 +1,31 @@
 {
-  "name": "social-linker",
-  "version": "0.1.0",
+  "name": "social-linker-app",
   "private": true,
+  "description": "",
+  "license": "",
+  "sideEffects": false,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "tsc && eslint src --ext .js,.jsx,.ts,.tsx",
-    "postinstall": "patch-package"
+    "build": "remix build",
+    "dev": "remix dev"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.4",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/styles": "^4.11.4",
-    "clsx": "^1.1.1",
-    "crypto": "^1.0.1",
-    "js-response": "^1.1.0",
-    "next": "12.0.7",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-hook-form": "^7.9.0",
-    "react-social-icons": "^5.5.1",
-    "react-text-typist": "^1.0.6"
+    "@remix-run/node": "^1.4.3",
+    "@remix-run/react": "^1.4.3",
+    "@remix-run/vercel": "^1.4.3",
+    "@vercel/node": "^1.14.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@types/react": "17.0.33",
-    "eslint": "^8.13.0",
-    "eslint-config-next": "12.1.5",
-    "eslint-config-whiteroom": "2.1.0",
-    "patch-package": "^6.4.7",
-    "prettier": "2.6.2",
-    "typescript": "^4.6.3"
+    "@remix-run/dev": "^1.4.3",
+    "@remix-run/eslint-config": "^1.4.3",
+    "@remix-run/serve": "^1.4.3",
+    "@types/react": "^17.0.24",
+    "@types/react-dom": "^17.0.9",
+    "eslint": "^8.11.0",
+    "typescript": "^4.5.5"
+  },
+  "engines": {
+    "node": ">=14"
   }
 }
