--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "sideEffects": false,
   "scripts": {
     "build": "remix build",
-    "dev": "remix dev"
+    "dev": "remix dev",
+    "lint": "tsc && eslint app --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
     "@remix-run/node": "^1.4.3",
@@ -18,12 +19,13 @@
   },
   "devDependencies": {
     "@remix-run/dev": "^1.4.3",
-    "@remix-run/eslint-config": "^1.4.3",
     "@remix-run/serve": "^1.4.3",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
-    "eslint": "^8.11.0",
-    "typescript": "^4.5.5"
+    "eslint": "^8.13.0",
+    "eslint-config-whiteroom": "2.1.0",
+    "prettier": "2.6.2",
+    "typescript": "^4.6.3"
   },
   "engines": {
     "node": ">=14"
