--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
   "license": "",
   "sideEffects": false,
   "scripts": {
-    "build": "remix build",
-    "dev": "remix dev",
+    "build": "run-s build:*",
+    "build:css": "yarn generate:css -- --minify",
+    "build:remix": "remix build",
+    "dev": "run-p dev:*",
+    "dev:css": "yarn generate:css -- --watch",
+    "dev:remix": "remix dev",
+    "generate:css": "npx tailwindcss -i ./styles/tailwind.css -o ./app/tailwind.css",
     "lint": "tsc && eslint app --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
@@ -24,7 +29,9 @@
     "@types/react-dom": "^17.0.9",
     "eslint": "^8.13.0",
     "eslint-config-whiteroom": "2.1.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "2.6.2",
+    "tailwindcss": "^3.0.24",
     "typescript": "^4.6.3"
   },
   "engines": {
