--- a/.prettierrc
+++ b/.prettierrc
@@ -10,5 +10,8 @@
   "semi": true,
   "singleQuote": true,
   "trailingComma": "all",
-  "useTabs": false
+  "useTabs": false,
+  "plugins": [
+    "prettier-plugin-tailwindcss"
+  ]
 }
