--- a/package.json
+++ b/package.json
@@ -20,17 +20,21 @@
     "@remix-run/vercel": "^1.4.3",
     "@vercel/node": "^1.14.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-text-typist": "^1.0.9"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.4.3",
     "@remix-run/serve": "^1.4.3",
+    "@tailwindcss/forms": "^0.5.0",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
+    "@types/tailwindcss": "^3.0.10",
     "eslint": "^8.13.0",
     "eslint-config-whiteroom": "2.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "2.6.2",
+    "prettier-plugin-tailwindcss": "^0.1.10",
     "tailwindcss": "^3.0.24",
     "typescript": "^4.6.3"
   },
