--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@vercel/node": "^1.14.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-text-typist": "^1.0.9"
+    "react-text-typist": "^1.0.9",
+    "zod": "^3.14.4"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.4.3",
