--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-text-typist": "^1.0.9",
-    "zod": "^3.14.4"
+    "zod": "^3.14.4",
+    "zod-form-data": "^1.2.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.4.3",
