--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@remix-run/react": "^1.4.3",
     "@remix-run/vercel": "^1.4.3",
     "@vercel/node": "^1.14.0",
+    "flattenizer": "^1.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-text-typist": "^1.0.9",
+    "uuid": "^8.3.2",
     "zod": "^3.14.4",
     "zod-form-data": "^1.2.0"
   },
@@ -32,6 +34,7 @@
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "@types/tailwindcss": "^3.0.10",
+    "@types/uuid": "^8.3.4",
     "eslint": "^8.13.0",
     "eslint-config-whiteroom": "2.1.0",
     "npm-run-all": "^4.1.5",
