--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "@remix-run/node": "^1.4.3",
     "@remix-run/react": "^1.4.3",
     "@remix-run/vercel": "^1.4.3",
+    "@remix-validated-form/with-zod": "^2.0.1",
     "@vercel/node": "^1.14.0",
-    "flattenizer": "^1.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-text-typist": "^1.0.9",
+    "remix-validated-form": "^4.4.3",
     "uuid": "^8.3.2",
     "zod": "^3.14.4",
     "zod-form-data": "^1.2.0"
