--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@remix-run/vercel": "^1.4.3",
     "@remix-validated-form/with-zod": "^2.0.1",
     "@vercel/node": "^1.14.0",
+    "flowbite": "^1.4.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-text-typist": "^1.0.9",
@@ -31,7 +32,6 @@
   "devDependencies": {
     "@remix-run/dev": "^1.4.3",
     "@remix-run/serve": "^1.4.3",
-    "@tailwindcss/forms": "^0.5.0",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "@types/tailwindcss": "^3.0.10",
