--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@remix-run/vercel": "^1.4.3",
     "@remix-validated-form/with-zod": "^2.0.1",
     "@vercel/node": "^1.14.0",
-    "flowbite": "^1.4.5",
+    "daisyui": "^2.15.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-text-typist": "^1.0.9",
