--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "daisyui": "^2.15.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-social-icons": "^5.13.0",
     "react-text-typist": "^1.0.9",
     "remix-validated-form": "^4.4.3",
     "uuid": "^8.3.2",
