--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "dev:css": "yarn generate:css -- --watch",
     "dev:remix": "remix dev",
     "generate:css": "npx tailwindcss -i ./styles/tailwind.css -o ./app/styles/tailwind.css",
-    "lint": "tsc && eslint app --ext .js,.jsx,.ts,.tsx"
+    "lint": "tsc && eslint app --ext .js,.jsx,.ts,.tsx",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@remix-run/node": "^1.4.3",
@@ -40,6 +41,7 @@
     "eslint": "^8.13.0",
     "eslint-config-whiteroom": "2.1.0",
     "npm-run-all": "^4.1.5",
+    "patch-package": "^6.4.7",
     "prettier": "2.6.2",
     "prettier-plugin-tailwindcss": "^0.1.10",
     "tailwindcss": "^3.0.24",
