--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "sideEffects": false,
   "scripts": {
     "build": "run-s build:*",
-    "build:css": "yarn generate:css -- --minify",
+    "build:css": "yarn generate:css --minify",
     "build:remix": "remix build",
     "dev": "run-p dev:*",
-    "dev:css": "yarn generate:css -- --watch",
+    "dev:css": "yarn generate:css --watch",
     "dev:remix": "remix dev",
     "generate:css": "npx tailwindcss -i ./styles/tailwind.css -o ./app/styles/tailwind.css",
     "lint": "tsc && eslint app --ext .js,.jsx,.ts,.tsx",
