--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
     "@remix-validated-form/with-zod": "^2.0.1",
     "@vercel/node": "^2.4.4",
     "daisyui": "^2.15.2",
+    "dotenv-vault-core": "^0.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-social-icons": "^5.13.0",
     "react-text-typist": "^1.0.9",
     "remix-validated-form": "^4.5.3",
     "uuid": "^8.3.2",
-    "zod": "^3.14.4",
+    "zod": "^3.19.1",
     "zod-form-data": "^1.2.0"
   },
   "devDependencies": {
