--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "dev:remix": "remix dev",
     "generate:css": "npx tailwindcss -i ./styles/tailwind.css -o ./app/styles/tailwind.css",
     "lint": "tsc && eslint app --ext .js,.jsx,.ts,.tsx",
-    "postinstall": "patch-package",
     "dotenv-pull": "npx dotenv-vault@latest pull"
   },
   "dependencies": {
@@ -26,7 +25,7 @@
     "dotenv-vault-core": "^0.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-social-icons": "^5.13.0",
+    "react-social-icons": "^5.15.0",
     "react-text-typist": "^1.0.9",
     "remix-validated-form": "^4.5.3",
     "uuid": "^8.3.2",
@@ -43,7 +42,6 @@
     "eslint": "^8.13.0",
     "eslint-config-whiteroom": "2.1.0",
     "npm-run-all": "^4.1.5",
-    "patch-package": "^6.4.7",
     "prettier": "2.6.2",
     "prettier-plugin-tailwindcss": "^0.1.10",
     "tailwindcss": "^3.0.24",
@@ -51,5 +49,10 @@
   },
   "engines": {
     "node": ">=14"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "react-social-icons@5.15.0": "patches/react-social-icons@5.15.0.patch"
+    }
   }
 }
