--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-social-icons": "^5.15.0",
-    "react-text-typist": "^1.1.6",
+    "react-text-typist": "1.1.0",
     "remix-validated-form": "^4.6.7",
     "uuid": "^9.0.0",
     "zod": "^3.20.2",
