--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18.2.0",
     "react-social-icons": "^5.15.0",
     "remix-validated-form": "^4.6.7",
+    "tailwind-merge": "^1.8.1",
     "typewriter-effect": "^2.19.0",
     "uuid": "^9.0.0",
     "zod": "^3.20.2",
