--- a/package.json
+++ b/package.json
@@ -1,32 +1,30 @@
 {
   "name": "social-linker-app",
   "private": true,
-  "description": "",
-  "license": "",
-  "sideEffects": false,
+  "type": "module",
+  "sideEffect": false,
   "scripts": {
     "build": "remix vite:build",
     "dev": "remix vite:dev",
-    "generate:css": "npx tailwindcss -i ./styles/tailwind.css -o ./app/styles/tailwind.css",
     "typecheck": "tsc",
-    "lint": "biome check .",
-    "dotenv-pull": "npx dotenv-vault@latest pull"
+    "lint": "biome check ."
   },
   "dependencies": {
     "@remix-run/node": "^2.9.2",
     "@remix-run/react": "^2.9.2",
     "@remix-run/serve": "^2.9.2",
     "@remix-validated-form/with-zod": "^2.0.7",
-    "daisyui": "^2.49.0",
+    "@t3-oss/env-core": "^0.10.1",
+    "daisyui": "^2.52.0",
     "dotenv-vault-core": "^0.7.1",
     "isbot": "^5.1.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-social-icons": "^5.15.0",
     "remix-validated-form": "^5.1.5",
-    "tailwind-merge": "^1.8.1",
-    "typewriter-effect": "^2.19.0",
-    "uuid": "^9.0.0",
+    "tailwind-merge": "^2.3.0",
+    "typewriter-effect": "^2.21.0",
+    "uuid": "^9.0.1",
     "zod": "^3.23.8",
     "zod-form-data": "^2.0.2"
   },
@@ -34,26 +32,24 @@
     "@biomejs/biome": "^1.7.3",
     "@remix-run/dev": "^2.9.2",
     "@total-typescript/tsconfig": "^1.0.4",
-    "@types/react": "^18.2.20",
-    "@types/react-dom": "^18.2.7",
-    "@types/tailwindcss": "^3.1.0",
-    "@types/uuid": "^9.0.0",
+    "@types/react": "^18.3.2",
+    "@types/react-dom": "^18.3.0",
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "prettier": "3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
-    "tailwindcss": "^3.2.4",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
-    "vite": "^5.1.0",
-    "vite-tsconfig-paths": "^4.2.1"
+    "vite": "^5.2.11",
+    "vite-tsconfig-paths": "^4.3.2"
   },
   "engines": {
     "node": ">=18.0.0"
   },
   "pnpm": {
     "patchedDependencies": {
-      "react-social-icons@5.15.0": "patches/react-social-icons@5.15.0.patch",
-      "typewriter-effect@2.19.0": "patches/typewriter-effect@2.19.0.patch"
+      "react-social-icons@5.15.0": "patches/react-social-icons@5.15.0.patch"
     }
   }
 }
