--- a/package.json
+++ b/package.json
@@ -44,8 +44,9 @@
     "vite": "^5.2.11",
     "vite-tsconfig-paths": "^4.3.2"
   },
+  "packageManager": "pnpm@8.15.7",
   "engines": {
-    "node": ">=18.0.0"
+    "node": "20.x"
   },
   "pnpm": {
     "patchedDependencies": {
